--- a/packages/app2/package.json
+++ b/packages/app2/package.json
@@ -7,7 +7,21 @@
     "@loadable/server": "^5.14.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
     "@loadable/babel-plugin": "^5.13.2",
-    "@loadable/webpack-plugin": "^5.14.0"
+    "@loadable/webpack-plugin": "^5.14.0",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.10.1",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0",
+    "express": "^4.17.1",
+    "webpack-dev-middleware": "^4.0.2",
+    "server-side-module-federation-plugin": "^1.0.2"
+  },
+  "scripts": {
+    "start": "webpack serve"
   }
 }
